--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,12 +18,12 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #b8952e;
+  background: #4682B4;
 }
 
 body {
-  background-color: #19181b;
-  color: #f5f4f5;
+  background-color: white;
+  color: whitesmoke;
 }
 
 .container {
@@ -41,11 +41,15 @@ body {
   left: 0;
 
   background-color: #2e2c30;
-  padding: 0.75rem 1.25rem;
+  padding: 0;
   border-bottom-right-radius: 0.75rem;
 
   height: 3.5rem;
   width: 8.7rem;
+}
+
+#Agendamentos {
+  color: black;
 }
 
 @media (max-width: 1100px) {
